--- a/working/main.tex
+++ b/working/main.tex
@@ -161,7 +161,8 @@ This form is studied with convergence guarantees under suitable assumptions on t
 \subsection*{Consensus equilibrium viewpoint}
 \addcontentsline{toc}{subsection}{Consensus equilibrium viewpoint}
 PnP does not always correspond to minimising a single explicit objective function.
-An alternative way to understand PnP is the consensus equilibrium (CE) viewpoint.
+An alternative way to understand PnP is the consensus equilibrium (CE) viewpoint \cite{buzzard2018ce}.
+
 In CE, we look for a point where two operators agree:
 one operator comes from the data model (the forward problem),
 and the other operator is the denoiser.
