--- a/working/references.bib
+++ b/working/references.bib
@@ -318,3 +318,28 @@
   archivePrefix = {arXiv},
   primaryClass  = {eess.IV}
 }
+
+
+% ==============
+% Convergent PnP
+% ==============
+
+@misc{nair2021fixedpoint,
+  author       = {Nair, Pravin and Gavaskar, Ruturaj G. and Chaudhury, Kunal N.},
+  title        = {Fixed-Point and Objective Convergence of Plug-and-Play Algorithms},
+  year         = {2021},
+  howpublished = {arXiv preprint},
+  eprint       = {2104.10348},
+  archivePrefix = {arXiv},
+  primaryClass  = {math.OC}
+}
+
+@misc{hurault2021gsd,
+  author       = {Hurault, Samuel and Leclaire, Arthur and Papadakis, Nicolas},
+  title        = {Gradient Step Denoiser for Convergent Plug-and-Play},
+  year         = {2021},
+  howpublished = {arXiv preprint},
+  eprint       = {2110.03220},
+  archivePrefix = {arXiv},
+  primaryClass  = {cs.CV}
+}
