--- a/working/references.bib
+++ b/working/references.bib
@@ -343,3 +343,75 @@
   archivePrefix = {arXiv},
   primaryClass  = {cs.CV}
 }
+
+
+% =========================
+% Intepretability and uncertainty quantification in PnP
+% =========================
+
+@article{laumont2022pnpula,
+  title = {Bayesian Imaging Using Plug \& Play Priors: When Langevin Meets Tweedie},
+  author = {Laumont, R{\'e}mi and De Bortoli, Valentin and Almansa, Andr{\'e}s and Delon, Julie and Durmus, Alain and Pereyra, Marcelo A.},
+  journal = {SIAM Journal on Imaging Sciences},
+  volume = {15},
+  number = {2},
+  pages = {701--737},
+  year = {2022},
+  doi = {10.1137/21M1406349}
+}
+
+@inproceedings{renaud2024mismatch,
+  title = {Plug-and-Play Posterior Sampling under Mismatched Measurement and Prior Models},
+  author = {Renaud, Marien and Liu, Jiaming and de Bortoli, Valentin and Almansa, Andres and Kamilov, Ulugbek},
+  booktitle = {International Conference on Learning Representations (ICLR)},
+  year = {2024}
+}
+
+@inproceedings{ekmekci2021pnp_uq,
+  title = {What Does Your Computational Imaging Algorithm Not Know?: A Plug-and-Play Model Quantifying Model Uncertainty},
+  author = {Ekmekci, Canberk and Cetin, Mujdat},
+  booktitle = {Proceedings of the IEEE/CVF International Conference on Computer Vision (ICCV) Workshops},
+  pages = {4018--4027},
+  year = {2021}
+}
+
+@article{terris2023pnp_uq_radio,
+  title = {Plug-and-play imaging with model uncertainty quantification in radio astronomy},
+  author = {Terris, Matthieu and Tang, Chao and Jackson, Adrian and Wiaux, Yves},
+  journal = {arXiv preprint arXiv:2312.07137},
+  year = {2023}
+}
+
+@article{reehorst2019red,
+  title = {Regularization by Denoising: Clarifications and New Interpretations},
+  author = {Reehorst, Edward T. and Schniter, Philip},
+  journal = {IEEE Transactions on Computational Imaging},
+  volume = {5},
+  number = {1},
+  pages = {52--67},
+  year = {2019},
+  doi = {10.1109/TCI.2018.2880326}
+}
+
+@article{park2024scorepnp,
+  title = {Plug-and-Play Priors as a Score-Based Method},
+  author = {Park, Chicago Y. and Hu, Yuyang and McCann, Michael T. and Garcia-Cardona, Cristina and Wohlberg, Brendt and Kamilov, Ulugbek S.},
+  journal = {arXiv preprint arXiv:2412.11108},
+  year = {2024}
+}
+
+
+% =========================
+% Tutorial / review
+% =========================
+
+@article{kamilov2023spm,
+  title = {Plug-and-Play Methods for Integrating Physical and Learned Models in Computational Imaging: Theory, algorithms, and applications},
+  author = {Kamilov, Ulugbek S. and Bouman, Charles A. and Buzzard, Gregery T. and Wohlberg, Brendt},
+  journal = {IEEE Signal Processing Magazine},
+  volume = {40},
+  number = {1},
+  pages = {85--97},
+  year = {2023},
+  doi = {10.1109/MSP.2022.3199595}
+}
